Some GeoLocation Funcionalities fixed and tested!

--- a/geotest.html
+++ b/geotest.html
@@ -8,8 +8,10 @@
 <body>
     <script>
         var a = new GeoWeb();
+        a.setMapType("hybrid");
         console.log(a);
         document.body.appendChild(a)
+        
     </script>
 </body>
 </html>
